--- a/nginx_pod_ver1.yaml
+++ b/nginx_pod_ver1.yaml
@@ -5,7 +5,6 @@ metadata:
 spec:
   containers:
     - name: container-nginx
-      image: nginx:1.26
+      image: nginx:latest
       ports: 
         - containerPort: 80
-        
