--- a/nginx_pod_ver1.yaml
+++ b/nginx_pod_ver1.yaml
@@ -2,6 +2,11 @@ apiVersion : v1
 kind: Pod
 metadata:
   name: nginx-pod
+  labels: 
+    env   : prod
+    app   : main
+    tier  : frontend
+    owner : NikitaTertyschny
 spec:
   containers:
     - name: container-nginx
