--- a/nginx_pod_ver1.yaml
+++ b/nginx_pod_ver1.yaml
@@ -13,3 +13,8 @@ spec:
       image: nginx:latest
       ports: 
         - containerPort: 80
+
+    - name: container-api
+      image: tomcat:8.5.38
+      ports: 
+        - containerPort: 8080    
