--- a/my_service.yaml
+++ b/my_service.yaml
@@ -1,3 +1,42 @@
+apiVersion : apps/v1
+kind: Deployment
+metadata:
+  name: my-web-deployment-multi-pod
+  labels: 
+    app   : my-k8s-deployment
+    env   : prod
+    tier  : frontend
+    owner : NikitaTertyschny
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      project: multi-pod
+  template:
+    metadata:
+      labels:
+        project: multi-pod  #  Service will look for those PODS labels!
+    spec:
+      containers:
+      - name: mypods-nginx
+        image: nginx:latest
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        ports:
+          - containerPort: 80
+      - name: mypods-tomcat
+        image: tomcat:latest
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        ports:
+          - containerPort: 8080
+
+---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,10 +46,14 @@ metadata:
     owner: NikitaTertyschny
 spec:
   selector:
-    project: mypodsauto  # Selecting PODS with those Labels
+    project:  multi-pod  # Selecting PODS with those Labels
   ports:
-    - name       : app-listener
+    - name       : my-web-app-listener
       protocol   : TCP
       port       : 80  # Port on Load Balancer
       targetPort : 80  # Port on POD
+    - name       : not-my-web-app-listener
+      protocol   : TCP
+      port       : 8888  # Port on Load Balancer
+      targetPort : 8080  # Port on POD
   type: ClusterIP
